--- a/gradle.properties
+++ b/gradle.properties
@@ -2,11 +2,11 @@
 org.gradle.jvmargs=-Xmx3G
 
 # Mod Properties
-mod_version = 1.0.0-alpha.1
+mod_version = 1.0.0-alpha.2
 # mod_version = 2.0.0-alpha.5.1
 version_type=alpha
 maven_group = ru.kelcu
-archives_base_name = Camera Head
+archives_base_name = CamHeads
 
 # Mods
-alinlib=2.1.0-rc.2
+alinlib=2.1.0-rc.6
